--- a/public/styles.css
+++ b/public/styles.css
@@ -3,11 +3,36 @@
     justify-items: center;
 } */
 
-img {
-    width: 250px;
-    height: 250px;
+.profilepic {
+    margin-left: 400px;
+    margin-top: 100px;
+    width: 120px;
+    height: 120px;
     margin: "auto";
     display: "block";
-    margin-bottom: theme.spacing(2);
-    object-fit: contain;
+    /* margin-bottom: theme.spacing(2); */
+    /* object-fit: contain; */
+    border-radius: 50%;
   }
+
+  input{
+      margin-left: 410px;
+      margin-top: 20px;
+  }
+
+
+    .btn{
+        /* position: relative;
+        bottom: 60px;
+        right: 150px;
+        margin-top: 30px; */
+        background-image: linear-gradient(#00ff66, #008033);
+        padding: 7px;
+        border-radius: 6px;
+        border: none;
+        text-align: center;
+        text-decoration: none;
+        color: white;
+        font-size: 16px;
+        display: inline-block;
+      }
